# RetroForge

./: CMakeLists.txt  README.md  RetroForge.sln
RetroForge/: CMakeCache.txt  CMakeLists.txt  Main.cpp  RetroForge.cpp  RetroForge.vcxproj  RetroForge.vcxproj.filters
RetroForge/editor/: CMakeLists.txt
RetroForge/editor/src/: Editor.cpp
RetroForge/engine/: CMakeLists.txt
RetroForge/engine/include/: Engine.h  Window.h
RetroForge/engine/include/core/: Camera2D.h  Camera3D.h  Engine.h  ISystem.h  Window.h
RetroForge/engine/include/rendering/: CoreRenderer.h  Mesh.h  MeshRenderer.h  Renderable.h  RenderablePtrWrapper.h  Shader.h  VoxelGrid.h  VoxelRenderer.h
RetroForge/engine/shaders/mesh/: mesh_fragment.glsl  mesh_vertex.glsl
RetroForge/engine/shaders/voxel/: voxel_fragment.glsl  voxel_vertex.glsl
RetroForge/engine/src/: Engine.cpp  Window.cpp
RetroForge/engine/src/core/: Camera2D.cpp  Camera3D.cpp  Engine.cpp  Window.cpp
RetroForge/engine/src/rendering/: CoreRenderer.cpp  Mesh.cpp  MeshRenderer.cpp  Shader.cpp  VoxelGrid.cpp  VoxelRenderer.cpp
RetroForge/game/: CMakeLists.txt
RetroForge/game/src/: Main.cpp
